objects/LLC_BI__Loan_Modification__c.object
<CustomObject>
    <description>The Loan Modification Object is used to capture information about a modification on a loan.</description>
    <fields>
        <fullName>LLC_BI__Date_to_Colson__c</fullName>
        <description>This field is not currently used as part of the product. It is being reviewed to deprecate.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date  this modification was sent to Colson for approval</inlineHelpText>
        <label>Date to Colson</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effective_Date__c</fullName>
        <description>This date field is a manually entered and optional. It is used in the loan modification process to specify the date at which the modifications made will take effect.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Explanation__c</fullName>
        <description>This field is an optional free text area, that is manually entered when creating a loan modification. It  is used to specify the reasons that modifications are being made on the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please identify why this loan modification is being proposed</inlineHelpText>
        <label>Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Lookup_Key__c</fullName>
        <description>This field is a formula field, that is automatically populated when starting a loan modification and is the modification&apos;s unique external ID, used in associating the modification to the original loan record. Loan modifications in general are not required but are optionally created based on financial institution business process.</description>
        <formula>LLC_BI__Loan__r.LLC_BI__lookupKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Mod_Detail__c</fullName>
        <description>This field is a free text area that is manually entered and optional. The field  is used to specify details of the loan modification.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter the specific details of the Loan Modification.</inlineHelpText>
        <label>Loan Mod Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Modification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to specify whether the loan modification has been sent for approval. If the box is checked, the loan modification has been sent. This field is automatically populated when the loan modification record is submitted for approval.</description>
        <inlineHelpText>Check this box when the loan modification has been sent</inlineHelpText>
        <label>Loan Modification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Number__c</fullName>
        <description>Field Deprecated.  Replaced by Loan_Lookup_Key__c.</description>
        <formula>LLC_BI__Loan__r.LLC_BI__Loan_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field Deprecated.  Replaced by Loan_Lookup_Key__c.</inlineHelpText>
        <label>-D Loan Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This is a Master-Detail field that is automatically populated when starting a loan modification from the loan. The field is used to specify the loan that the modification is associated to. Loan modifications in general are not required but are optionally created based on financial institution business process.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Loan Modifications</relationshipLabel>
        <relationshipName>Loan_Modifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mod_Type__c</fullName>
        <description>This field is a picklist field that is optional and manually entered. It is used to specify whether a notification or a approval is assigned for this loan modification</description>
        <label>Mod Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notification</fullName>
                    <default>true</default>
                    <label>Notification</label>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Modification_Type__c</fullName>
        <description>This field is a picklist field that is manually entered, and is required only if Loan Modifications are used. It is used to specify the type of modification that is happening on the loan. Loan modifications in general are not required but are optionally created based on financial institution business process.</description>
        <label>Modification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correct Existing Note</fullName>
                </value>
                <value>
                    <fullName>Extend Amortization</fullName>
                </value>
                <value>
                    <fullName>Increase Loan Amount</fullName>
                </value>
                <value>
                    <fullName>Interest Rate Reduction</fullName>
                </value>
                <value>
                    <fullName>Payment Deferral</fullName>
                </value>
                <value>
                    <fullName>Reduce Loan Amount</fullName>
                </value>
                <value>
                    <fullName>Interest Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Amount__c</fullName>
        <description>This currency field is used to specify a new amount. It is an optional and manually entered field. If applicable, it is the amount that is being proposed by the loan modification.</description>
        <inlineHelpText>If applicable, please enter newly proposed amount</inlineHelpText>
        <label>New Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Rate__c</fullName>
        <description>This percent field is used to specify a new interest rate. It is an optional and manually entered.  If applicable, it is the new rate that is being proposed by the loan modification.</description>
        <inlineHelpText>If applicable, please enter new proposed rate</inlineHelpText>
        <label>New Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Objective__c</fullName>
        <description>This field is a free text field used to specify what the modification hopes to accomplish. This field is manually entered and optional.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please identify what this modification hopes to accomplish</inlineHelpText>
        <label>Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Owner__c</fullName>
        <description>This field is a manually selected, optional, picklist. It specifies which department owns the modification process.</description>
        <label>Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Loan Ops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is a picklist used to specify the status of the loan modification throughout the approval process. This field can be manually entered or it can be populated via additional workflow configuration based on the approval process.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loan Modification</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LM-{MM}-{YY}-{00}</displayFormat>
        <label>Loan Modification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Modifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>